[package]
name = "minecraft_server_scanner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
rand = "0.8.5"
tokio = { version = "1.21.2", features = ["full"] }
craftping = { version = "0.3.0", features = ["async-tokio"] }